bug fixed and updared spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1382,7 +1382,6 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 13rem;
   overflow: hidden;
   height: 3rem;
   background-size: 300% 300%;
@@ -1402,6 +1401,7 @@ html {
   background-origin: border-box;
   background-clip: content-box, border-box;
   font-family: "Orbitron", sans-serif;
+  padding: 0.5rem 3rem;
 }
 
 #container-stars {
